--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-+<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
@@ -540,6 +540,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
