--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
 
                     <div class="subsection">
-                        <h3>📊 Járműlimit rablásoknál</h3>
+                        <h3>📊 Járműlimit rablásoknál (MAX)</h3>
                         <div class="robbery-limits">
                             <div class="robbery-type">
                                 <h4>Boltrablás</h4>
@@ -276,16 +276,16 @@
                             </div>
                             <div class="robbery-type">
                                 <h4>Ékszerbolt</h4>
-                                <p>1 játékos túsz kötelező, max. 4 NPC túsz</p>
+                                <p>Illegál: 4 jármű | Rendvédelem: 6 jármű</p>
                             </div>
                             <div class="robbery-type">
-                                <h4>Kamion rablás</h4>
-                                <p>Illegál: 5 jármű | Rendvédelem: 7 jármű</p>
-                                <p><small>A kamion 50 km/h alatt robban!</small></p>
+                                <h4>Benzin Lopás</h4>
+                                <p>Illegál: 2 jármű + Rabló jármű | Rendvédelem: 4 jármű</p>
+                                <p><small>Fer legyen mind a kettő fél!</small></p>
                             </div>
                         </div>
                         <div class="warning">
-                            📌 Speciális rablásoknál (Humane, BobCat, Yacht) részletes egyedi szabályok érvényesek.
+                            📌 Speciális rablásoknál (*KIEGÉSZÍTÉS*) részletes egyedi szabályok érvényesek.
                         </div>
                     </div>
                 </div>
@@ -540,6 +540,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
